--- a/.github/workflows/dotnet-code-metrics.yml
+++ b/.github/workflows/dotnet-code-metrics.yml
@@ -26,7 +26,7 @@ jobs:
           owner: ${{ github.repository_owner }}
           name: ${{ github.repository }}
           branch: ${{ github.ref }}
-          dir: ${{ 'dotnet/samples/github-actions/DotNet.GitHubAction' }}
+          dir: ${{ './github-actions/DotNet.GitHubAction' }}
 
       # Create a pull request if there are changes.
       - name: Create pull request
